docs/api/qiskit/0.24/qiskit.aqua.components.optimizers.SPSA.md
---
title: SPSA
description: API reference for qiskit.aqua.components.optimizers.SPSA
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.optimizers.SPSA
---

<span id="qiskit-aqua-components-optimizers-spsa" />

# qiskit.aqua.components.optimizers.SPSA

<span id="qiskit.aqua.components.optimizers.SPSA" />

`SPSA(maxiter=1000, save_steps=1, last_avg=1, c0=0.6283185307179586, c1=0.1, c2=0.602, c3=0.101, c4=0, skip_calibration=False, max_trials=None)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/components/optimizers/spsa.py "view source code")

Simultaneous Perturbation Stochastic Approximation (SPSA) optimizer.

SPSA is an algorithmic method for optimizing systems with multiple unknown parameters. As an optimization method, it is appropriately suited to large-scale population models, adaptive modeling, and simulation optimization.

<Admonition title="See also" type="note">
  Many examples are presented at the [SPSA Web site](http://www.jhuapl.edu/SPSA).
</Admonition>

SPSA is a descent method capable of finding global minima, sharing this property with other methods as simulated annealing. Its main feature is the gradient approximation, which requires only two measurements of the objective function, regardless of the dimension of the optimization problem.

<Admonition title="Note" type="note">
  SPSA can be used in the presence of noise, and it is therefore indicated in situations involving measurement uncertainty on a quantum computation when finding a minimum. If you are executing a variational algorithm using a Quantum ASseMbly Language (QASM) simulator or a real device, SPSA would be the most recommended choice among the optimizers provided here.
</Admonition>

The optimization process includes a calibration phase, which requires additional functional evaluations.

For further details, please refer to [https://arxiv.org/pdf/1704.05018v2.pdf#section\*.11](https://arxiv.org/pdf/1704.05018v2.pdf#section*.11) (Supplementary information Section IV.)

**Parameters**

*   **maxiter** (`int`) – Maximum number of iterations to perform.
*   **save\_steps** (`int`) – Save intermediate info every save\_steps step. It has a min. value of 1.
*   **last\_avg** (`int`) – Averaged parameters over the last\_avg iterations. If last\_avg = 1, only the last iteration is considered. It has a min. value of 1.
*   **c0** (`float`) – The initial a. Step size to update parameters.
*   **c1** (`float`) – The initial c. The step size used to approximate gradient.
*   **c2** (`float`) – The alpha in the paper, and it is used to adjust a (c0) at each iteration.
*   **c3** (`float`) – The gamma in the paper, and it is used to adjust c (c1) at each iteration.
*   **c4** (`float`) – The parameter used to control a as well.
*   **skip\_calibration** (`bool`) – Skip calibration and use provided c(s) as is.
*   **max\_trials** (`Optional`\[`int`]) – Deprecated, use maxiter.

### \_\_init\_\_

<span id="qiskit.aqua.components.optimizers.SPSA.__init__" />

`__init__(maxiter=1000, save_steps=1, last_avg=1, c0=0.6283185307179586, c1=0.1, c2=0.602, c3=0.101, c4=0, skip_calibration=False, max_trials=None)`

**Parameters**

*   **maxiter** (`int`) – Maximum number of iterations to perform.
*   **save\_steps** (`int`) – Save intermediate info every save\_steps step. It has a min. value of 1.
*   **last\_avg** (`int`) – Averaged parameters over the last\_avg iterations. If last\_avg = 1, only the last iteration is considered. It has a min. value of 1.
*   **c0** (`float`) – The initial a. Step size to update parameters.
*   **c1** (`float`) – The initial c. The step size used to approximate gradient.
*   **c2** (`float`) – The alpha in the paper, and it is used to adjust a (c0) at each iteration.
*   **c3** (`float`) – The gamma in the paper, and it is used to adjust c (c1) at each iteration.
*   **c4** (`float`) – The parameter used to control a as well.
*   **skip\_calibration** (`bool`) – Skip calibration and use provided c(s) as is.
*   **max\_trials** (`Optional`\[`int`]) – Deprecated, use maxiter.

## Methods

|                                                                                                                                                                          |                                                                                                           |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.aqua.components.optimizers.SPSA.__init__ "qiskit.aqua.components.optimizers.SPSA.__init__")(\[maxiter, save\_steps, last\_avg, …])                  | **type maxiter**`int`                                                                                     |
| [`get_support_level`](#qiskit.aqua.components.optimizers.SPSA.get_support_level "qiskit.aqua.components.optimizers.SPSA.get_support_level")()                            | return support level dictionary                                                                           |
| [`gradient_num_diff`](#qiskit.aqua.components.optimizers.SPSA.gradient_num_diff "qiskit.aqua.components.optimizers.SPSA.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
| [`optimize`](#qiskit.aqua.components.optimizers.SPSA.optimize "qiskit.aqua.components.optimizers.SPSA.optimize")(num\_vars, objective\_function\[, …])                   | Perform optimization.                                                                                     |
| [`print_options`](#qiskit.aqua.components.optimizers.SPSA.print_options "qiskit.aqua.components.optimizers.SPSA.print_options")()                                        | Print algorithm-specific options.                                                                         |
| [`set_max_evals_grouped`](#qiskit.aqua.components.optimizers.SPSA.set_max_evals_grouped "qiskit.aqua.components.optimizers.SPSA.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                     |
| [`set_options`](#qiskit.aqua.components.optimizers.SPSA.set_options "qiskit.aqua.components.optimizers.SPSA.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                         |
| [`wrap_function`](#qiskit.aqua.components.optimizers.SPSA.wrap_function "qiskit.aqua.components.optimizers.SPSA.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                              |

## Attributes

|                                                                                                                                                                           |                                     |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
| [`bounds_support_level`](#qiskit.aqua.components.optimizers.SPSA.bounds_support_level "qiskit.aqua.components.optimizers.SPSA.bounds_support_level")                      | Returns bounds support level        |
| [`gradient_support_level`](#qiskit.aqua.components.optimizers.SPSA.gradient_support_level "qiskit.aqua.components.optimizers.SPSA.gradient_support_level")                | Returns gradient support level      |
| [`initial_point_support_level`](#qiskit.aqua.components.optimizers.SPSA.initial_point_support_level "qiskit.aqua.components.optimizers.SPSA.initial_point_support_level") | Returns initial point support level |
| [`is_bounds_ignored`](#qiskit.aqua.components.optimizers.SPSA.is_bounds_ignored "qiskit.aqua.components.optimizers.SPSA.is_bounds_ignored")                               | Returns is bounds ignored           |
| [`is_bounds_required`](#qiskit.aqua.components.optimizers.SPSA.is_bounds_required "qiskit.aqua.components.optimizers.SPSA.is_bounds_required")                            | Returns is bounds required          |
| [`is_bounds_supported`](#qiskit.aqua.components.optimizers.SPSA.is_bounds_supported "qiskit.aqua.components.optimizers.SPSA.is_bounds_supported")                         | Returns is bounds supported         |
| [`is_gradient_ignored`](#qiskit.aqua.components.optimizers.SPSA.is_gradient_ignored "qiskit.aqua.components.optimizers.SPSA.is_gradient_ignored")                         | Returns is gradient ignored         |
| [`is_gradient_required`](#qiskit.aqua.components.optimizers.SPSA.is_gradient_required "qiskit.aqua.components.optimizers.SPSA.is_gradient_required")                      | Returns is gradient required        |
| [`is_gradient_supported`](#qiskit.aqua.components.optimizers.SPSA.is_gradient_supported "qiskit.aqua.components.optimizers.SPSA.is_gradient_supported")                   | Returns is gradient supported       |
| [`is_initial_point_ignored`](#qiskit.aqua.components.optimizers.SPSA.is_initial_point_ignored "qiskit.aqua.components.optimizers.SPSA.is_initial_point_ignored")          | Returns is initial point ignored    |
| [`is_initial_point_required`](#qiskit.aqua.components.optimizers.SPSA.is_initial_point_required "qiskit.aqua.components.optimizers.SPSA.is_initial_point_required")       | Returns is initial point required   |
| [`is_initial_point_supported`](#qiskit.aqua.components.optimizers.SPSA.is_initial_point_supported "qiskit.aqua.components.optimizers.SPSA.is_initial_point_supported")    | Returns is initial point supported  |
| [`setting`](#qiskit.aqua.components.optimizers.SPSA.setting "qiskit.aqua.components.optimizers.SPSA.setting")                                                             | Return setting                      |

### bounds\_support\_level

<span id="qiskit.aqua.components.optimizers.SPSA.bounds_support_level" />

`property bounds_support_level`

Returns bounds support level

### get\_support\_level

<span id="qiskit.aqua.components.optimizers.SPSA.get_support_level" />

`get_support_level()`

return support level dictionary

### gradient\_num\_diff

<span id="qiskit.aqua.components.optimizers.SPSA.gradient_num_diff" />

`static gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)`

We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

**Parameters**

*   **x\_center** (*ndarray*) – point around which we compute the gradient
*   **f** (*func*) – the function of which the gradient is to be computed.
*   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
*   **max\_evals\_grouped** (*int*) – max evals grouped

**Returns**

the gradient computed

**Return type**

grad

### gradient\_support\_level

<span id="qiskit.aqua.components.optimizers.SPSA.gradient_support_level" />

`property gradient_support_level`

Returns gradient support level

### initial\_point\_support\_level

<span id="qiskit.aqua.components.optimizers.SPSA.initial_point_support_level" />

`property initial_point_support_level`

Returns initial point support level

### is\_bounds\_ignored

<span id="qiskit.aqua.components.optimizers.SPSA.is_bounds_ignored" />

`property is_bounds_ignored`

Returns is bounds ignored

### is\_bounds\_required

<span id="qiskit.aqua.components.optimizers.SPSA.is_bounds_required" />

`property is_bounds_required`

Returns is bounds required

### is\_bounds\_supported

<span id="qiskit.aqua.components.optimizers.SPSA.is_bounds_supported" />

`property is_bounds_supported`

Returns is bounds supported

### is\_gradient\_ignored

<span id="qiskit.aqua.components.optimizers.SPSA.is_gradient_ignored" />

`property is_gradient_ignored`

Returns is gradient ignored

### is\_gradient\_required

<span id="qiskit.aqua.components.optimizers.SPSA.is_gradient_required" />

`property is_gradient_required`

Returns is gradient required

### is\_gradient\_supported

<span id="qiskit.aqua.components.optimizers.SPSA.is_gradient_supported" />

`property is_gradient_supported`

Returns is gradient supported

### is\_initial\_point\_ignored

<span id="qiskit.aqua.components.optimizers.SPSA.is_initial_point_ignored" />

`property is_initial_point_ignored`

Returns is initial point ignored

### is\_initial\_point\_required

<span id="qiskit.aqua.components.optimizers.SPSA.is_initial_point_required" />

`property is_initial_point_required`

Returns is initial point required

### is\_initial\_point\_supported

<span id="qiskit.aqua.components.optimizers.SPSA.is_initial_point_supported" />

`property is_initial_point_supported`

Returns is initial point supported

### optimize

<span id="qiskit.aqua.components.optimizers.SPSA.optimize" />

`optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)`

Perform optimization.

**Parameters**

*   **num\_vars** (*int*) – Number of parameters to be optimized.
*   **objective\_function** (*callable*) – A function that computes the objective function.
*   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
*   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
*   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

**Returns**

**point, value, nfev**

point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

**Raises**

**ValueError** – invalid input

### print\_options

<span id="qiskit.aqua.components.optimizers.SPSA.print_options" />

`print_options()`

Print algorithm-specific options.

### set\_max\_evals\_grouped

<span id="qiskit.aqua.components.optimizers.SPSA.set_max_evals_grouped" />

`set_max_evals_grouped(limit)`

Set max evals grouped

### set\_options

<span id="qiskit.aqua.components.optimizers.SPSA.set_options" />

`set_options(**kwargs)`

Sets or updates values in the options dictionary.

The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

**Parameters**

**kwargs** (*dict*) – options, given as name=value.

### setting

<span id="qiskit.aqua.components.optimizers.SPSA.setting" />

`property setting`

Return setting

### wrap\_function

<span id="qiskit.aqua.components.optimizers.SPSA.wrap_function" />

`static wrap_function(function, args)`

Wrap the function to implicitly inject the args at the call of the function.

**Parameters**

*   **function** (*func*) – the target function
*   **args** (*tuple*) – the args to be injected

**Returns**

wrapper

**Return type**

function\_wrapper

